# picomemo

./: .gitignore  Makefile  README.md  c25519.c  c25519.h  driver.h  hacl.c  hacl.h  mbedtls.c  omemo.c  omemo.h  omemo.js  omemo0.c  omemo0.h  omemo2.c  omemo2.h  openssl.c  project.doap  split.lua  wasm.c  wasm.js
.github/: SECURITY.md
.github/workflows/: ci.yml
example/: README.md  build.mk  im.c
example/esp-im/main/: CMakeLists.txt  esp-im.c
hacl/: Hacl_Ed25519.c  Hacl_Ed25519.h  Makefile  amalg.lua  benchmark.c  hacl.h
lua/: Makefile  db.lua  definitions.lua  im.lua  lomemo.c  native.c  prelude.lua  session.lua  test-lomemo.lua  transport_tcp.lua  transport_websocket.lua  util.lua  write.lua  xep-omemo.lua  xep-sm.lua  xep_disco.lua  xep_omemo.lua  xep_ping.lua  xep_receipts.lua  xep_sm.lua  xml.lua  xmppstream.lua
lua/spec/: lomemo_spec.lua  xmppstream_spec.lua
test/: all.sh  bot-omemo.py  build.mk  bundle.py  defaultcallbacks.inc  generate.c  generatebundle.c  generatestore.c  initsession.py  install.sh  omemo.c  platforms.sh  store.inc  testsession.c  verify.sh  wasm.js  xmpp.c
